src/objects/SomTv_B2BAktionsVerantwortliche__c.object
<CustomObject>
    <fields>
        <fullName>SomTv_Benutzer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auswahl des Benutzers für die B2B Aktion.</description>
        <inlineHelpText>Auswahl des Benutzers für die B2B Aktion.</inlineHelpText>
        <label>Benutzer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kampagnen_Verantwortliche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_FunktionDesVerantwortlichen__c</fullName>
        <description>Welche Funktion nimmt der Benutzer innerhalb der B2B Aktion ein.</description>
        <inlineHelpText>Welche Funktion nimmt der Benutzer innerhalb der B2B Aktion ein.</inlineHelpText>
        <label>Funktion des Verantwortlichen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Projektleiter</fullName>
                </value>
                <value>
                    <fullName>Projektmitglied/Teilprojektleiter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_Kampagne__c</fullName>
        <description>Auswahl der B2B Aktion.</description>
        <inlineHelpText>Auswahl der B2B Aktion.</inlineHelpText>
        <label>B2B Aktion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>B2B Aktionsverantwortliche</relationshipLabel>
        <relationshipName>Kampagnen_Verantwortliche</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>B2B Aktionsverantwortliche</label>
    <nameField>
        <displayFormat>KV-{000}</displayFormat>
        <label>B2B Aktions-Verantwortliche-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Aktionsverantwortliche</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>